--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -2,7 +2,7 @@ name: Execute
 
 on:
   schedule:
-    - cron:  '* 13 * * *'
+    - cron:  '0 13 * * *'
 
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
