--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,5 @@ jobs:
       run: pip install -r dev-requirements.txt
     - name: Run tests
       run: bash ./scripts/test.sh
+    - name: Run against tasks repo
+      run: python task-bot.py srobo/tasks
