--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -2,7 +2,8 @@ name: Execute
 
 on:
   schedule:
-    - cron:  '0 13 * * *'
+    - cron: '0 13 * * 3'
+    - cron: '0 13 * 4 *
 
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
