--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -2,8 +2,9 @@ name: Execute
 
 on:
   schedule:
-    - cron: '0 13 * * 3'  # Every wednesday
-    - cron: '0 13 * 4 *'  # Everyday in April
+    - cron: '0 13 * 11-12,1-3 3'  # Every wednesday when outside busy season
+    - cron: '0 13 * 4-5 *'  # Everyday in April and May, for competition
+    - cron: '0 13 * 9-10 *'  # Everyday in September and October, for kickstart
 
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
