--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -19,6 +19,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - uses: actions/cache@v1
+      with:
+        path: ~/.cache/pip
+        key: pip-${{ hashFiles('requirements.txt') }}-${{ hashFiles('dev-requirements.txt') }}
     - name: Install dependencies
       run: pip install -r requirements.txt
     - name: Run
