--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -3,7 +3,8 @@ name: Execute
 on:
   schedule:
     - cron: '0 13 * 11-12,1-3 3'  # Every wednesday when outside busy season
-    - cron: '0 13 * 4-5 *'  # Everyday in April and May, for competition
+    # - cron: '0 13 * 4-5 *'  # Everyday in April and May, for competition
+    - cron: '0 13 * 6-7 *'  # Everyday in June and July, for possible competition
     - cron: '0 13 * 9-10 *'  # Everyday in September and October, for kickstart
 
 env:
