--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -3,8 +3,12 @@ name: Execute
 on:
   schedule:
     - cron: '0 13 * 11-12,1-3 3'  # Every wednesday when outside busy season
-    # - cron: '0 13 * 4-5 *'  # Everyday in April and May, for competition
-    - cron: '0 13 * 6-7 *'  # Everyday in June and July, for possible competition
+    - cron: '0 13 * 4-5 *'  # Everyday in April and May, for competition
+
+    - cron: '0 13 1-24 6 3'  # Every wednesday in early June, for virtual competition prep
+    - cron: '0 13 24-30 6 *'  # Everyday in late June, for virtual competition
+    - cron: '0 13 1-14 7 *'  # Everyday in early July, for virtual competition
+
     - cron: '0 13 * 9-10 *'  # Everyday in September and October, for kickstart
 
 env:
