--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 13 * 11-12,1-3 3'  # Every wednesday when outside busy season
     - cron: '0 13 * 4-5 *'  # Everyday in April and May, for competition
 
-    - cron: '0 13 1-23 6 3'  # Every wednesday in early June, for virtual competition prep
+    - cron: '0 13 3,10,17 6 *'  # Every wednesday in early June, for virtual competition prep
     - cron: '0 13 24-30 6 *'  # Everyday in late June, for virtual competition
     - cron: '0 13 1-14 7 *'  # Everyday in early July, for virtual competition
 
