--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -2,14 +2,7 @@ name: Execute
 
 on:
   schedule:
-    - cron: '0 13 * 11-12,1-3 3'  # Every wednesday when outside busy season
-    - cron: '0 13 * 4-5 *'  # Everyday in April and May, for competition
-
-    - cron: '0 13 3,10,17 6 *'  # Every wednesday in early June, for virtual competition prep
-    - cron: '0 13 24-30 6 *'  # Everyday in late June, for virtual competition
-    - cron: '0 13 1-14 7 *'  # Everyday in early July, for virtual competition
-
-    - cron: '0 13 * 9-10 *'  # Everyday in September and October, for kickstart
+    - cron: '0 13 * 9-10 3'  # Every Wednesday in September, for kickstart
 
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
