--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -2,7 +2,7 @@ name: Execute
 
 on:
   schedule:
-    - cron: '0 13 * 1-3 3'  # Every Wednesday until April
+    - cron: '0 13 * 8-12,1-3 3'  # Every Wednesday Aug - April
     - cron: '0 13 * 4 1,3,5'  # Every Mon,Wed,Fri in April
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
