--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: "3.10"
     - uses: actions/cache@v1
       with:
         path: ~/.cache/pip
