--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -3,6 +3,8 @@ name: Execute
 on:
   schedule:
     - cron: '0 13 * 8-12,1-3 3'  # Every Wednesday Aug - April
+  workflow_dispatch:
+
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
